# llamactl

./: .gitignore  .tool-versions  CLAUDE.md  README.md  llamactl.py  main.py  presets.json  pyproject.toml
docs/: build.md  immortal.md  models.md  niah-benchmark.md  opencode.md  troubleshooting.md
src/: main.py
src/llamactl/: __init__.py  main.py
tests/: conftest.py  test_e2e.py  test_integration.py  test_llamactl.py
