[project]
name = "llamactl"
version = "0.1.0"
authors = [
    { name = "pythoninthegrass", email = "4097471+pythoninthegrass@users.noreply.github.com" }
]
requires-python = ">=3.13,<3.14"

dependencies = [
    "httpx>=0.27,<1.0",
    "jinja2>=3.1.6",
    "ollama>=0.4",
    "typer>=0.24.1",
]

[project.optional-dependencies]
dev = [
    "hypothesis[cli]>=6.151.12,<7.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "benchmark: marks performance benchmark tests"
]
